--- a/src/app/control-flows/control-flow.component.html
+++ b/src/app/control-flows/control-flow.component.html
@@ -1,5 +1,5 @@
 <div style=" background-color: lightgrey;
-  border: 5px solid #ea57b9;
+  border: 5px solid #57beea;
   padding: 20px;
   margin: 10px;
   float: left;
