--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,62 @@
 
+.container {
+ //display: grid;
+ // grid-template-columns: 1fr 3fr;
+ // grid-template-rows: 100px 1fr;
+ //grid-column-gap: 100px;
+ // grid-row-gap: 0px;
+  max-width: 1100px;
+  margin: 100px auto;
+}
+
+@media (max-width: 500px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 60px repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 20px;
+  }
+
+  .container h1 {
+    font-size: 30px;
+  }
+}
+
+nav {
+  background-color: #3498db; /* Set your desired background color */
+  padding: 10px; /* Adjust padding as needed */
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+  margin-right: 20px; /* Adjust spacing between navigation items */
+}
+
+a {
+  display: block;
+  color: #fff; /* Set your desired text color */
+  text-align: center;
+  padding: 10px 15px; /* Adjust padding as needed */
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px; /* Add rounded corners if desired */
+}
+
+a:hover {
+  background-color: #2980b9; /* Set your desired hover background color */
+}
+
+.active {
+  background-color: #2c3e50; /* Set your desired active background color */
+}
+
 .angular-playground-text {
   font-family: 'Arial', sans-serif;
   font-size: 2em;
@@ -16,3 +74,5 @@
 .class2 {
   color: #2ecc71;
 }
+
+
