--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
  //grid-column-gap: 100px;
  // grid-row-gap: 0px;
   max-width: 1100px;
-  margin: 100px auto;
+  margin: 0 auto 100px;
 }
 
 @media (max-width: 500px) {
@@ -72,7 +72,9 @@ a:hover {
   color: #3498db;
 }
 .class2 {
-  color: #2ecc71;
+  color: #47d1ef;
 }
-
+.tech-fest {
+  max-width: 100%;
+}
 
