--- a/src/app/applepie-recipe/apple-recipe-component.html
+++ b/src/app/applepie-recipe/apple-recipe-component.html
@@ -1,7 +1,7 @@
 <div class="pie-recipe">
-  <h2>{{ pieName }} Recipe</h2>
+  <h2 class="pieName">{{ pieName }} Recipe</h2>
+  <br>
   <img src="{{ pieImageUrl }}" alt="{{ pieName }}" class="pie-image">
-  <!-- <img src="{{ ashieImageUrl }}" alt="{{ ashieName }} " class="pie-image">-->
 
   <!--- Angular17 @Defer & New Control Flow Example 1-->
   <h3>Ingredients:</h3>
@@ -45,16 +45,17 @@
   <hr>
   <div>
     <br>
-    <button class="button-62" role="button" (click)="isClicked.set(true)">Open Survey Results</button>
+    <button class="button-62" role="button" (click)="isClicked.set(true)">Results</button>
     @defer (when isClicked()) {
       <app-survey-recipe></app-survey-recipe>
     } @placeholder {
-      <span class='placeholder'><h4>Waiting.....</h4></span>
+      <span class='placeholder'>
+        <h4>Placeholder - Click here to show survey results!</h4
+        ></span>
     } @loading (minimum 5s) {
       <span class='loading'><h4>Loading...</h4></span>
     } @error {
       <span class='error'><h4>Error..</h4></span>
     }
   </div>
-
 </div>
