--- a/src/app/ashieverse/ashieverse.component.html
+++ b/src/app/ashieverse/ashieverse.component.html
@@ -2,11 +2,12 @@
   <h2>{{ ashieName }}</h2>
   <div>
     @defer (on timer(3s)) {
-      <img src="{{ ashieImageUrl }}" alt="{{ ashieName }} " class="ashie-image">
+      <img src="{{ ashieImageUrl }}" alt="{{ ashieName }}" class="ashie-image">
     } @placeholder {
       <h2 class='placeholder'>Waiting.....</h2>
     } @loading (minimum 3s) {
       <h2 class='loading'>Loading...</h2>
+      <div class="loader"></div>
     } @error {
       <h2 class='error'>Error..</h2>
     }
