--- a/src/app/ashieverse/ashieverse.component.scss
+++ b/src/app/ashieverse/ashieverse.component.scss
@@ -2,24 +2,23 @@
   max-width: 100%;
   border-radius: 8px;
 }
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid blue;
-  border-right: 16px solid green;
-  border-bottom: 16px solid red;
-  width: 50px;
-  height: 50px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+.flex-container {
+  display: flex;
 }
 
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+.flex-item {
+  flex: 1;
+  /* Adjust flex property to control the width of each div */
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  box-sizing: border-box;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+pre {
+  background-color: #f4f4f4;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow-x: auto;
 }
