--- a/src/app/ashieverse/ashieverse.component.scss
+++ b/src/app/ashieverse/ashieverse.component.scss
@@ -16,7 +16,7 @@
 }
 
 pre {
-  background-color: #f4f4f4;
+  background-color: #d2f6f4;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
