--- a/src/app/applepie-recipe/apple-recipe-component.html
+++ b/src/app/applepie-recipe/apple-recipe-component.html
@@ -1,5 +1,5 @@
 <div class="pie-recipe">
-  <h2 class="pieName">{{ pieName }} Recipe</h2>
+  <h2 class="pieName">{{ pieName }}</h2>
   <br>
   <img src="{{ pieImageUrl }}" alt="{{ pieName }}" class="pie-image">
 
@@ -26,9 +26,6 @@
 
   <h3>Survey:</h3>
   <hr>
-  <!--- Old Control Flow *ngFor
-  <li *ngFor="let ingredient of ingredients">{{ ingredient.name }}</li>
-  -->
 
   <!--- Angular17 @Defer & New Control Flow Example 3-->
   <hr>
@@ -39,8 +36,8 @@
       <app-survey-recipe></app-survey-recipe>
     } @placeholder {
       <span class='placeholder'>
-        <h4>Placeholder - Click here to show survey results!</h4
-        ></span>
+        <h4>Placeholder - Click here to show survey results!</h4>
+      </span>
     } @loading (minimum 5s) {
       <h4 class='loading'>Loading...</h4>
       <div class="loader"></div>
