--- a/src/app/applepie-survey-recipe/survey-recipe.component.scss
+++ b/src/app/applepie-survey-recipe/survey-recipe.component.scss
@@ -10,15 +10,16 @@
   background-color: #ddd;
   height: 0;
 }
-.yes {
+.like {
   background-color: #ff69b4;
 }
-.no {
+.subscribe {
   background-color: #007bff;
 }
 .label {
   text-align: center;
 }
-.label-no {
-  margin-left: 10%;
+.label-sub {
+  margin-left: 8%;
 }
+
