--- a/src/app/applepie-survey-recipe/survey-recipe.component.html
+++ b/src/app/applepie-survey-recipe/survey-recipe.component.html
@@ -1,11 +1,10 @@
 <br>
-<hr>
 <h1>Survey Results</h1>
 <div class="chart">
-  <div class="chart-bar yes" style="height: 200px;"></div>
-  <div class="chart-bar no" style="height: 150px;"></div>
+  <div class="chart-bar like" style="height: 200px;"></div>
+  <div class="chart-bar subscribe" style="height: 150px;"></div>
 </div>
 <div class="chart">
-  <div class="label">Yes</div>
-  <div class="label-no">No</div>
+  <div class="label">Like</div>
+  <div class="label-sub">Subscribe</div>
 </div>
