New Control flow example

--- a/src/app/ashieverse/ashieverse.component.html
+++ b/src/app/ashieverse/ashieverse.component.html
@@ -11,7 +11,7 @@
       <h3>&#64;if</h3>
 
       <input [(ngModel)]="isCompleted" type="checkbox"/>
-      Check when you spot the 🔥 in the canvas painting!
+      Check when you spot the 🔥 in the canvas painting in 2 sec!
       <br>
           <!--
             @if (isCompleted) {
