--- a/src/app/ashieverse/ashieverse.component.scss
+++ b/src/app/ashieverse/ashieverse.component.scss
@@ -26,3 +26,10 @@ span {
   color: #231de5;
   font-weight: bold;
 }
+.for {
+  border: 1px solid #ddd;
+  overflow-x: auto;
+  background-color: #d2f6f4;
+  padding: 5px;
+  border-radius: 5px;
+}
