--- a/src/app/ashieverse/ashieverse.component.scss
+++ b/src/app/ashieverse/ashieverse.component.scss
@@ -27,6 +27,7 @@ span {
   font-weight: bold;
 }
 .for {
+  margin-top: 15px;
   border: 1px solid #ddd;
   overflow-x: auto;
   background-color: #d2f6f4;
