--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,7 @@
   }
 
   .content {
-    display: flex;
+    display: block;
     margin: 82px auto 32px;
     padding: 0 16px;
     max-width: 960px;
