--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 </div>
 
 <div class="content" role="main">  
+  <h1 class="header mb-4 text-center">FE Workshop 03: <b>Accessibility</b></h1>
   <div>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
