--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        <h5 class="card-title">Angular Accessibility: Dropdown</h5>
+        <div class="card-title" style="color: #999;">Angular Accessibility: Dropdown</div>
     </div>
     <div class="card-body">
         <form>
