--- a/src/app/simple-form/simple-form.component.html
+++ b/src/app/simple-form/simple-form.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        <h5 class="card-title">Angular Form: Before Accessibility Improvements</h5>
+        <div class="card-title">Angular Form: Before Accessibility Improvements</div>
     </div>
     <div class="card-body">
         <form>
