--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -5,6 +5,7 @@
     <div class="card-body">
         <form>
             <div class="row">
+              <div class="col-sm-4">
                 <div class="dropdown">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
@@ -15,7 +16,11 @@
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
-                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="btn btn-primary" (click)="showAlert()">Click me!</div>
+              </div>
             </div>
         </form>
     </div>
