--- a/src/app/design-patterns/behavioural-design-pattern/iterator-pattern/iterator.component.html
+++ b/src/app/design-patterns/behavioural-design-pattern/iterator-pattern/iterator.component.html
@@ -1,6 +1,6 @@
 <h2>Library - Books And Author</h2>
 <br/>
-<table class=".table-striped">
+<table>
     <thead>
         <tr>
             <th>Book</th>
