--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,214 @@
 /* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+body {
+    font-family: "Poppins", sans-serif;
+    background: #fafafa;
+  }
+  p {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+  }
+  a,
+  a:hover,
+  a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+  }
+.navbar {
+  padding: 15px 10px;
+  background: #fff;
+  border: none;
+  border-radius: 0;
+  margin-bottom: 40px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+  box-shadow: none;
+  outline: none !important;
+  border: none;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px dashed #ddd;
+}
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: rgb(58, 56, 54);
+    color: #fff;
+    transition: all 0.3s;
+  }
+  #sidebar.active {
+    margin-left: -250px;
+  }
+  
+  #sidebar .sidebar-header {
+    padding: 10px;
+    background: rgb(58, 56, 54);
+  }
+  #sidebar ul.components {
+    padding: 20px 0px;
+    border-bottom: 1px solid #6e7172;
+  }
+  
+  #sidebar ul p {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+  }
+  
+  #sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+  }
+  #sidebar ul li a:hover {
+    color: #868a99;
+    background: #fff;
+  }
+  
+  #sidebar ul li.active > a,
+  a[aria-expanded="true"] {
+    color: #fff;
+    background: #838489;
+  }
+  a[data-toggle="collapse"] {
+    position: relative;
+  }
+  .dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+  }
+  ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #84868d;
+  }
+  
+  ul.CTAs {
+    padding: 20px;
+  }
+  
+  ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+  }
+  a.download {
+    background: #fff;
+    color: #7f818a;
+  }
+  a.article,
+  a.article:hover {
+    background: rgb(58, 56, 54);
+    color: #fff !important;
+  }
+  
+  #content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+  }
+  
+  @media (maz-width: 768px) {
+    #sidebar {
+      margin-left: -250px;
+    }
+    #sidebar.active {
+      margin-left: 0px;
+    }
+    #sidebarCollapse span {
+      display: none;
+    }
+  }
+
+  $content-color: white;
+
+.button {
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 15px;
+  animation-fill-mode: backwards;
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.24), 0 10px 30px 0 rgba(0, 0, 0, 0.19);
+}
+
+.buy-button {
+  background-color: $content-color;
+  color: black;
+  border: 2px solid #4CAF50;
+
+  &:hover, &:after, &:focus {
+    background-color: #4CAF50;
+    color: $content-color;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0), 0 17px 80px 0 rgba(0, 0, 0, 0.50);
+  }
+}
+
+.delete-button {
+  background-color: $content-color;
+  color: black;
+  border: 2px solid #f44336;
+
+  &:hover {
+    background-color: #f44336;
+    color: $content-color;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+}
+
+table {
+  font-family: arial, sans-serif;
+  font-size: 10px;
+  border-collapse: collapse;
+}
+
+td, th {
+  border: 1px solid #dbdedf;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f3eaea;
+}
+
+.products-table {
+  width: 100%;
+  font-size: 18px;
+}
+.total-price {
+  color: cornsilk
+}
+
+.shadow {
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 8px 10px 0 rgba(231, 225, 66, 0.24),0 10px 30px 0 rgba(127, 232, 160, 0.96);
+}
