Brown Bag - CoPilot

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <nav>
     <ul>
       <li><a routerLink="/">Home Page</a></li>
+     <!--Add a new routerLink to the list for new path for todo-list -->
+      <li><a routerLink="/todo-list" routerLinkActive="class2">Todo List</a></li>
       <li><a routerLink="/control-flows" routerLinkActive="class2"> Control Flows</a></li>
       <li><a routerLink="/deferred-loading" routerLinkActive="class2">Deferred Views</a></li>
       <li><a routerLink="/singleton" routerLinkActive="class2">Singleton</a></li>
