--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,14 @@
       <li><a routerLink="/todo-list" routerLinkActive="class2">Todo List</a></li>
       <li><a routerLink="/control-flows" routerLinkActive="class2"> Control Flows</a></li>
       <li><a routerLink="/deferred-loading" routerLinkActive="class2">Deferred Views</a></li>
-      <li><a routerLink="/singleton" routerLinkActive="class2">Singleton</a></li>
+      <!--<li><a routerLink="/singleton" routerLinkActive="class2">Singleton</a></li>
       <li><a routerLink="/prototype" routerLinkActive="class2">Prototype</a></li>
       <li><a routerLink="/facade" routerLinkActive="class2">Facade</a></li>
       <li><a routerLink="/factory" routerLinkActive="class2">Factory</a></li>
       <li><a routerLink="/adapter" routerLinkActive="class2">Adapter</a></li>
       <li><a routerLink="/logging" routerLinkActive="class2">Logging</a></li>
       <li><a routerLink="/state" routerLinkActive="class2">State</a></li>
-      <li><a routerLink="/iterator" routerLinkActive="class2">Iterator</a></li>
+      <li><a routerLink="/iterator" routerLinkActive="class2">Iterator</a></li>-->
       <li><a routerLink="/ashieverse-art" routerLinkActive="class2">Art</a></li>
       <li><a routerLink="/apple-pie-recipe" routerLinkActive="class2">Receipe</a></li>
     </ul>
