CSS Tricks - Flexbox Examples added

--- a/src/app/css-tricks/css-tricks.component.html
+++ b/src/app/css-tricks/css-tricks.component.html
@@ -1,24 +1,72 @@
-<div class="outerContainer hide">
-    <h3>CSS Variables (Custom Properties)​</h3>
-   
-</div>
 <div class="outerContainer">
+    <h1>CSS Variables (Custom Properties)​</h1>
+
+</div>
+<div class="outerContainer hide">
     <h3>Pseudo-Elements in CSS​</h3>
-    <div class="container">    
-        
+    <div class="container">
         <button type="submit">Submit</button>
         <h1 class="quote">do one thing every day that scares you.</h1>
     </div>
 </div>
 
 <div class="outerContainer hide">
-    <h3>CSS Tricks</h3>
-    <div class="container">    
-    </div>
+    <h3>CSS Functions ( <i>calc(), min(),  max()</i> )</h3>
+
+    <div class="calc-example">This box uses calc()</div>
+    <div class="min-example">This box uses min()</div>
+    <div class="max-example">This box uses max()</div>
+
+
 </div>
 
 <div class="outerContainer hide">
-    <h3>CSS Tricks</h3>
-    <div class="container">    
+    <h3>CSS Flexbox</h3>
+    <div class="flex-container">
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
+        <div class="flex-item">Item 3</div>
     </div>
+
+    <div class="flex-container">
+        <div class="flex-item" style="flex: 3;">Item 1 (Grows more)</div>
+        <div class="flex-item" style="flex: 1;">Item 2 (Grows less)</div>
+        <div class="flex-item" style="flex: 1;">Item 3 (Grows less)</div>
+    </div>
+
+    <div class="flex-container" style="align-items: baseline;">
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item" style="height: 50px;">Item 2</div>
+        <div class="flex-item" style="height: 100px;">Item 3</div>
+    </div>
+
+
+    <!-- Row -->
+    <div class="flex-container" style="flex-direction: row;">
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
+        <div class="flex-item">Item 3</div>
+    </div>
+
+    <!-- Row Reverse -->
+    <div class="flex-container" style="flex-direction: row-reverse;">
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
+        <div class="flex-item">Item 3</div>
+    </div>
+
+    <!-- Column -->
+    <div class="flex-container" style="flex-direction: column;">
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
+        <div class="flex-item">Item 3</div>
+    </div>
+
+    <!-- Column Reverse -->
+    <div class="flex-container" style="flex-direction: column-reverse;">
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
+        <div class="flex-item">Item 3</div>
+    </div>
+
 </div>
