Workshop Solution added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@
       <li><a routerLink="/iterator" routerLinkActive="class2">Iterator</a></li>-->
       <li><a routerLink="/ashieverse-art" routerLinkActive="class2">Art</a></li>
       <li><a routerLink="/apple-pie-recipe" routerLinkActive="class2">Receipe</a></li>
+      <!-- <li><a routerLink="/problem-statement" routerLinkActive="class2">Solution</a></li> -->
+      
     </ul>
   </nav>
   <router-outlet></router-outlet>
