added debug tricks component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       <li><a routerLink="/ashieverse-art" routerLinkActive="class2">Art</a></li>
       <li><a routerLink="/apple-pie-recipe" routerLinkActive="class2">Receipe</a></li>
       <!-- <li><a routerLink="/problem-statement" routerLinkActive="class2">Solution</a></li> -->
-      
+      <li><a routerLink="/debug-tricks" routerLinkActive="class2">Debugging Tricks</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
