--- a/src/app/debug-tricks/sec-counter/sec-counter.component.html
+++ b/src/app/debug-tricks/sec-counter/sec-counter.component.html
@@ -4,3 +4,5 @@
 <ul>
   <li *ngFor="let item of itemsStartingWithA">{{ item }}</li>
 </ul>
+<h3>Total Expected Fresh Fruites and Veggies = 100 <br>
+  Actual = {{processedFruitesAndVeggies.length}}</h3>
