--- a/src/app/debug-tricks/debug-demo/debug-demo.component.css
+++ b/src/app/debug-tricks/debug-demo/debug-demo.component.css
@@ -3,9 +3,11 @@
   background-color: #333;
   color: #fff;
   padding: 8px;
+  width: max-content;
   border-radius: 4px;
   position: relative;
   z-index: 1000;
+  font-size: smaller;
 }
 
 body {
